[gd_scene load_steps=5 format=3 uid="uid://cwknor23h0m3l"]

[ext_resource type="Script" path="res://MainScript.gd" id="1"]
[ext_resource type="Texture2D" uid="uid://d4ec6g7ycn151" path="res://BEE-WARE.PNG" id="2"]
[ext_resource type="PackedScene" path="res://menu_music.tscn" id="3"]
[ext_resource type="Script" path="res://Video.gd" id="8"]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1")

[node name="VideoPlayer" type="VideoStreamPlayer" parent="."]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
autoplay = true
script = ExtResource("8")

[node name="Bee-Ware" type="Sprite2D" parent="."]
position = Vector2(439, 263)
rotation = -0.436332
scale = Vector2(0.368608, 0.368608)
texture = ExtResource("2")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0

[node name="Start" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Start Game"

[node name="instructions" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "How to Play"

[node name="Quit" type="Button" parent="VBoxContainer"]
layout_mode = 2
text = "Quit"

[node name="AudioStreamPlayer" parent="." instance=ExtResource("3")]

[connection signal="finished" from="VideoPlayer" to="." method="_on_VideoPlayer_finished"]
[connection signal="finished" from="VideoPlayer" to="VideoPlayer" method="_on_VideoPlayer_finished"]
[connection signal="pressed" from="VBoxContainer/Start" to="." method="_on_Start_pressed"]
[connection signal="pressed" from="VBoxContainer/instructions" to="." method="_on_instructions_pressed"]
[connection signal="pressed" from="VBoxContainer/Quit" to="." method="_on_Quit_pressed"]
